[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Actors/Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/enemy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 35 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 53.4382, 11.4064 )

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0, -46 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -35 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 168, -29 )
scale = Vector2( 4.3, 3.5 )
rect = Rect2( -50, -10, 22, 18 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
modulate = Color( 0.192157, 0.411765, 0.996078, 1 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -80 )
shape = SubResource( 2 )

[node name="EnemySensor" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySensor"]
position = Vector2( 0, -35.0481 )
shape = SubResource( 3 )
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="body_entered" from="EnemySensor" to="." method="_on_EnemySensor_body_entered"]
